fix grep text encoding handling